[project]
name = "sunbridge"
version = "0.1.0"
description = "Nepal import compliance checker for solar inverters using LangGraph and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
